# neuroinformatik

./: .gitignore  README.md  pyproject.toml
docs/research/: 00-module-scope.md  01-learning-roadmap.md  02-project-strategy.md  03-source-map.md  04-self-check-questions.md  05-xor-rechenschritte.md  06-backward-pass-visualisierung.md
scripts/: dev.py
src/: __init__.py  matrix.py  neuralnet.py  simulation.py
src/api/: __init__.py  app.py  dependencies.py  main.py  presets.py  schemas.py
src/api/routes/: __init__.py  health.py  meta.py  session.py
src/api/services/: __init__.py  session.py
src/tui/: __init__.py  __main__.py  app.py  controller.py  help_text.py  main.py
src/web/: controller.py  index.html  package.json  pnpm-lock.yaml  serializer.py  server.py
src/web/src/app/: App.tsx  router.tsx
src/web/src/components/: AppShell.tsx  Block.tsx  ConnectionIndicator.tsx  CornerMarks.tsx  ErrorBanner.tsx  NetworkCanvas.tsx  Telemetry.tsx
src/web/src/lib/: format.ts
src/web/src/lib/api/: client.ts  types.ts
src/web/src/lib/session/: SessionProvider.tsx
src/web/src/pages/: ComparePage.tsx  InspectPage.tsx  TrainPage.tsx
src/web/src/styles/: global.css
src/web/static/: app.js  controls.js  index.html  loss_chart.js  network_graph.js  style.css
tests/: test_api.py  test_tui_controller.py
