[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroinformatik"
version = "0.1.0"
description = "Handwritten neural network experiments with a terminal UI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "textual>=8.1.1,<9.0",
]

[project.scripts]
neuroinformatik-tui = "src.tui.main:run"

[dependency-groups]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
